# DPGSIM

./: .gitignore  CMakeLists.txt  README.md
cmake/: NSIS.template.in
cmake/modules/: FindAR2GEMS.cmake
src/: CMakeLists.txt  common.h  dpg_grid_path.cpp  dpg_grid_path.h  dpg_sequential_simulation.h  dpgsim.cpp  dpgsim.h  library_init.cpp  lpm_ufrgs_dpgsim.ui  report.cpp  report.h  report.ui
tests/DPGSIM/: DPGSGS.par.xml
tests/DPGSIM/WalkerLake.prj/grid.grid/: grid_geometry.xml
tests/DPGSIM/WalkerLake.prj/walker_lake.grid/: grid_geometry.xml
tests/DPGSIM/WalkerLake.prj/walker_lake.grid/properties/: property__ID.sgems  property__T.sgems  property__U.sgems  property__V.sgems  property__V_nscore.sgems
